// Copyright 2020 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package envoy.source.extensions.common.wasm;

enum LifeSpan {
  FilterChain = 0;
  DownstreamRequest = 1;
  DownstreamConnection = 2;
}

// Argument expected by set_envoy_filter_state in envoy
// https://github.com/envoyproxy/envoy/blob/d741713c376d1e024236519fb59406c05702ad77/source/extensions/common/wasm/foreign.cc#L116
message SetEnvoyFilterStateArguments {
  string path = 1;
  string value = 2;
  LifeSpan span = 3;
}
